# IP2Location-C-Library

./: .gitignore  COPYING  ChangeLog  Developers_Guide.txt  INSTALL  Makefile.am  Makefile.in  Makefile.win  NEWS  README  README.md  aclocal.m4  build.sh  config.h.in  configure  configure.ac  elfbins.list  index.html  ip2location.1  ip2location.c  params.json
contrib/: IP2Location.spec  IP2Location.spec.in
data/: Makefile.am  Makefile.in  ip-country.pl
debian/: README  changelog  control  copyright  files
docs/source/: code.md  conf.py  index.md  quickstart.md
libIP2Location/: IP2Loc_DBInterface.c  IP2Loc_DBInterface.h  IP2Location.c  IP2Location.h  Makefile.am  Makefile.in
libIP2Location/iMath/: bintest.c  findprime.c  imath.c  imath.h  imdrover.c  imdrover.h  imrat.c  imrat.h  imtest.c  imtimer.c  iprime.c  iprime.h  pi.c  rsamath.c  rsamath.h
scripts/: build-deb.sh
test/: Makefile.am  Makefile.in  country_test_ipv4_data.txt  country_test_ipv6_data.txt  test-IP2Location.c
tools/: README  download.pl
